# fiscalidade_server

./: Cargo.toml  Dockerfile  README.md  build.rs  config.template.toml
.github/workflows/: ci.yml
config/: fiscalidade_server.conf
docs/: APIs.md  Instalação.md  Uso.md
migrations/2020-02-11-151716_create_initial_tables/: down.sql  up.sql
resources/: fiscalidade_server.service
scripts/: build.bat  build.sh  build_appimage.sh  setup.iss  setup.sh  setup_user.iss
src/: args.rs  config.rs  consts.rs  daemon_linux.rs  errors.rs  extractors.rs  handlers.rs  hashes.rs  home.rs  json.rs  lib.rs  main.rs  options.rs  response.rs  schema.rs  service_windows.rs  utils.rs  version.rs
src/cert/: config.rs  mod.rs  store.rs
src/config/: extractor.rs  mod.rs
src/config/models/: certificate.rs  company.rs  deployment.rs  mod.rs  server.rs  service.rs
src/daemon/: linux.rs  mod.rs
src/db/: cache.rs  mod.rs  schema.rs  service.rs  taxpayer.rs  taxpayer_service.rs
src/handlers/: dfe.rs  mod.rs  payload.rs
src/models/: cache.rs  mod.rs  service.rs  taxpayer.rs  taxpayer_service.rs
src/routes/: auth.rs  cache.rs  mod.rs  nfe.rs  service_auth.rs  services.rs  taxpayer.rs  taxpayer_service.rs
src/server/: config.rs
