[package]
name = "fiscalidade_server"
description = "Servidor REST para envio e consulta de XMLs de Documentos Fiscais da SEFAZ."
version = "0.3.0"
authors = ["Silvio Clécio <silvioprog@gmail.com>"]

[dependencies]
rocket = "^0.4"
rocket_contrib = { version = "^0.4", default-features = false, features = ["json", "diesel_postgres_pool"] }
diesel = { version = "^1", default-features = false, features = ["chrono", "postgres"] }
diesel_migrations = { version = "^1", default-features = false, features = ["postgres"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde = "^1"
serde_derive = "^1"
fiscalidade = { git = "https://github.com/risoflora/fiscalidade" }
anyhow = "^1"
thiserror = "^1"
getopts = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
nanoid = { git = "https://github.com/nikolay-govorov/nanoid" }
base64 = "^0.11"