[package]
name = "fiscalidade_server"
description = "Servidor REST para envio e consulta de XMLs de Documentos Fiscais da SEFAZ."
version = "0.7.2"
authors = ["Silvio Clécio <silvioprog@gmail.com>"]
repository = "https://github.com/risoflora/fiscalidade_server"
build = "build.rs"
edition = "2018"

[profile.release]
lto = true

[features]
default = ["embed_webservices"]
embed_webservices = ["fiscalidade/embed_webservices"]

[dependencies]
rocket = "^0.4"
rocket_contrib = { version = "^0.4", default-features = false, features = ["json", "diesel_postgres_pool"] }
diesel = { version = "^1", default-features = false, features = ["chrono", "postgres"] }
diesel_migrations = { version = "^1", default-features = false, features = ["postgres"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
fiscalidade = "^0.4"
anyhow = "^1"
thiserror = "^1"
log = "^0.4"
simplelog = "^0.7"
dotenv = "^0.15"
getopts = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
nanoid = { git = "https://github.com/nikolay-govorov/nanoid" }
base64 = "^0.11"

[target.'cfg(windows)'.dependencies]
windows-service = "^0.2"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"
